[project]
name = "unit-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.9.10",
    "streamlit>=1.43.1",
]

[project.scripts]
unit-converter = "unit_converter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
